@@ -185,6 +185,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Typo in customized decider example in user guide
     - Replace usage of unittest.TestSuite with unittest.main() (fix #3113)
 
+  From Arda Fu
+    - Fix cpp scanner regex logic to treat ifndef. Previously it was not properly 
+      differentiating between if, ifdef, and ifndef
 
 
 RELEASE 3.0.1 - Mon, 12 Nov 2017 15:31:33 -0700
